<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eBook_v3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_scroll_bar">ScrollBar</string>
    <string name="startRead">继续阅读</string>
    <string name="searchBook">找书</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    
    <!-- 底部菜单栏样式 -->
    <string name="main_home">首页</string>
    <string name="main_news">信息</string>
    <string name="main_my_info">我的资料</string>
    <string name="menu_search">搜索</string>
    <string name="more">更多</string>
    
    <string name="scroll_view_1_text_1">scroll_view_1_text_1</string>
    <string name="scroll_view_1_text_2">scroll_view_1_text_2</string>
    <string name="scroll_view_1_text_3">scroll_view_1_text_3</string>
    <string name="scroll_view_1_text_4">scroll_view_1_text_4</string>
    <string name="scroll_view_1_text_5">scroll_view_1_text_5</string>
    <string name="scroll_view_1_text_6">scroll_view_1_text_6</string>
    <string name="scroll_view_1_text_7">scroll_view_1_text_7</string>
    <string name="scroll_view_1_text_8">scroll_view_1_text_8</string>
    <string name="scroll_view_1_text_9">scroll_view_1_text_9</string>
    <string name="scroll_view_1_text_10">scroll_view_1_text_10</string>
    
    <string name="scroll_view_1_button_1">scroll_view_1_button_1</string>
    <string name="scroll_view_1_button_2">scroll_view_1_button_2</string>
    <string name="scroll_view_1_button_3">scroll_view_1_button_3</string>
    <string name="scroll_view_1_button_4">scroll_view_1_button_4</string>
    <string name="scroll_view_1_button_5">scroll_view_1_button_5</string>
    <string name="scroll_view_1_button_6">scroll_view_1_button_6</string>
    <string name="scroll_view_1_button_7">scroll_view_1_button_7</string>
    <string name="scroll_view_1_button_8">scroll_view_1_button_8</string>
    <string name="scroll_view_1_button_9">scroll_view_1_button_9</string>
    <string name="scroll_view_1_button_10">scroll_view_1_button_10</string>

</resources>
