<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/topInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <TextView
           android:id="@+id/chapterInfo"
           android:layout_width="fill_parent" 
           android:layout_height="wrap_content"/>
     </LinearLayout>
    
     <RelativeLayout    
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/layout"
                android:orientation="vertical"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout> 
        </ScrollView>
             <!-- 底部菜单栏布局文件 -->
    <TabHost
	android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<FrameLayout 
    		android:id="@android:id/tabcontent"
    		android:layout_width="fill_parent"
    		android:layout_height="0.0dip"
    		android:layout_weight="1.0"/>
    	<TabWidget 
    		android:id="@android:id/tabs"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.0"
    		android:visibility="gone"/>
    	<RadioGroup
    		android:id="@+id/main_tab"
    		android:background="@drawable/maintab_toolbar_bg"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:layout_gravity="bottom">
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_home"
    			android:drawableTop="@drawable/icon_1_n"
    			android:id="@+id/radio_button0"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_news"
    			android:drawableTop="@drawable/icon_2_n"
    			android:id="@+id/radio_button1"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_my_info"
    			android:drawableTop="@drawable/icon_3_n"
    			android:id="@+id/radio_button2"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/menu_search"
    			android:drawableTop="@drawable/icon_4_n"
    			android:id="@+id/radio_button3"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/more"
    			android:drawableTop="@drawable/icon_5_n"
    			android:id="@+id/radio_button4"
    			style="@style/main_tab_bottom"/>
    	</RadioGroup>
    </LinearLayout>
</TabHost> 
        <LinearLayout
            android:id="@+id/navigator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/prevChapter"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="prevChapter"/>
            <Button
                android:id="@+id/nextChapter"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="nextChapter"/>
        </LinearLayout>
    </RelativeLayout>      
</LinearLayout>